--- a/bsconfig.json
+++ b/bsconfig.json
@@ -22,7 +22,7 @@
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ],
   "bs-dev-dependencies": [
-      "bs-jest"
+      "@glennsl/bs-jest"
   ],
   "warnings": {
     "error" : "+101"
