--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "bsb -make-world",
     "test": "npm run build && jest",
     "test:watch": "jest --watchAll",
+    "test:watch-day-2": "jest --watchAll -- -t __tests__/day2Test",
     "watch": "bsb -make-world -w"
   },
   "keywords": [
